0007570: Exception in ShapeFix_Wireframe::FixSmallEdges

Exception fixed by checking if subshape removed completely.

Test-case for issue #7570